[package]
authors = ["Borlaug Blockchain"]
edition = "2018"
name = "pallet-audits"
version = "0.1.0"

[dependencies]
codec = {package = "parity-scale-codec", version = "2.0.0", default-features = false}
frame-support = {version = "3.0.0", default-features = false}
frame-system = {version = "3.0.0", default-features = false}
randomness = {package = "pallet-randomness-collective-flip", version = "3.0.0", default-features = false}
sp-runtime = {version = "3.0.0", default-features = false}
sp-std = {package = "sp-std", version = "3.0.0", default-features = false}
timestamp = {package = "pallet-timestamp", version = "3.0.0", default-features = false}

primitives = {package = "pallet-primitives", path = "../primitives", default-features = false}

[dev-dependencies]
chrono = "0.4"
serde = "1.0"
sp-core = {version = "3.0.0", default-features = false}
sp-io = {version = "3.0.0", default-features = false}

[features]
default = ['std']
std = [
  'codec/std',
  "sp-std/std",
  "frame-support/std",
  'frame-system/std',
  'sp-runtime/std',
  'randomness/std',
  "timestamp/std",
  "primitives/std",
]
