[package]
authors = ["Borlaug"]
edition = "2021"
name = "groups-runtime-api"
version = "0.0.1"

[dependencies]
codec = {package = "parity-scale-codec", version = "3.4.0", default-features = false}
frame-support = {version = "4.0.0-dev", default-features = false}
primitives = {package = "pallet-primitives", path = "../primitives", default-features = false}
sp-api = {version = "4.0.0-dev", default-features = false}

[dev-dependencies]
serde_json = "1.0"

[features]
default = ["std"]
std = [
  "codec/std",
  "frame-support/std",
  "primitives/std",
  "sp-api/std",
]
