[package]
authors = ["Borlaug Blockchain"]
edition = "2021"
name = "pallet-groups"
version = "0.1.0"

[dependencies]
codec = {package = "parity-scale-codec", version = "3.4.0", default-features = false}
frame-benchmarking = {default-features = false, version = "21.0.0", optional = true}
frame-support = {version = "21.0.0", default-features = false}
frame-system = {version = "21.0.0", default-features = false}
primitives = {package = "pallet-primitives", path = "../primitives", default-features = false}
scale-info = {version = "2.5.0", features = ["derive"], default-features = false}
sp-core = {package = "sp-core", version = "20.0.0", default-features = false}
sp-core-hashing = {version = "8.0.0", default-features = false, optional = true}
sp-io = {version = "22.0.0", default-features = false}
sp-runtime = {version = "23.0.0", default-features = false}
sp-std = {version = "7.0.0", default-features = false}

extrinsic-extra = {path = "../../traits/extrinsic_extra", default-features = false}
group-info = {path = "../../traits/group_info", default-features = false}

[dev-dependencies]
chrono = "0.4"
pallet-balances = {version = "21.0.0", default-features = false}
runtime = {package = "borlaug-runtime", path = "../../runtime", default-features = false}
serde = {version = "1.0.130", default-features = false}
settings = {package = "pallet-settings", path = "../settings", default-features = false}
sp-core = {package = "sp-core", version = "20.0.0", default-features = false}
sp-core-hashing = {version = "8.0.0", default-features = false}

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking", "sp-core-hashing"]
std = [
  "sp-io/std",
  "sp-core-hashing?/std",
  "codec/std",
  "sp-std/std",
  "sp-core/std",
  "frame-support/std",
  "scale-info/std",
  "frame-system/std",
  "sp-runtime/std",
  "primitives/std",
  "group-info/std",
  "extrinsic-extra/std",
]
