[package]
authors = ["Borlaug Blockchain"]
edition = "2018"
name = "pallet-primitives"
version = "0.1.0"

[dependencies]
codec = {package = "parity-scale-codec", version = "2.3.1", default-features = false, features = ["derive"]}
serde = {version = "1.0.101", default-features = false, features = ["derive"]}

sp-core = {version = "3.0.0", default-features = false}
sp-runtime = {version = "3.0.0", default-features = false}
sp-std = {package = "sp-std", version = "3.0.0", default-features = false}

timestamp = {package = "pallet-timestamp", version = "3.0.0", default-features = false}

frame-support = {version = "3.0.0", default-features = false}
frame-system = {version = "3.0.0", default-features = false}

[features]
default = ['std']
no_std = []
std = [
  'serde/std',
  'codec/std',
  'sp-runtime/std',
  "sp-core/std",
  "sp-std/std",
  "timestamp/std",
  'frame-system/std',
  'frame-support/std',
]
