[package]
authors = ["Borlaug Blockchain"]
edition = "2018"
name = "pallet-settings"
version = "0.1.0"

[dependencies]
codec = {package = "parity-scale-codec", version = "2.0.0", default-features = false}
frame-support = {version = "3.0.0", default-features = false}
frame-system = {version = "3.0.0", default-features = false}
serde = "1.0"
sp-core = {package = "sp-core", version = "3.0.0", default-features = false}
sp-io = {version = "3.0.0", default-features = false}
sp-runtime = {version = "3.0.0", default-features = false}
sp-std = {package = "sp-std", version = "3.0.0", default-features = false}
timestamp = {package = "pallet-timestamp", version = "3.0.0", default-features = false}

extrinsic-extra = {path = "../../traits/extrinsic_extra", default-features = false}

[dev-dependencies]
chrono = "0.4"
sp-core = {version = "3.0.0", default-features = false}

[features]
default = ["std"]
std = [
  "codec/std",
  "sp-std/std",
  "sp-core/std",
  "sp-io/std",
  "frame-support/std",
  "frame-system/std",
  "sp-runtime/std",
  "timestamp/std",
  "extrinsic-extra/std",
]
