[package]
authors = ['Gautam Dhameja <quasijatt@outlook.com>']
edition = '2021'
license = 'Apache-2.0'
name = 'substrate-validator-set'
repository = 'https://github.com/gautamdhameja/substrate-validator-set'
version = '0.9.37'

[dependencies]
codec = {package = "parity-scale-codec", version = "3.4.0"}
frame-benchmarking = {default-features = false, version = "21.0.0", optional = true}
frame-support = "21.0.0"
frame-system = {version = "21.0.0", default-features = false}
pallet-session = {version = "21.0.0", default-features = false, optional = true}
sp-core = {version = "20.0.0", default-features = false}
sp-io = {version = "22.0.0", default-features = false}
sp-runtime = {version = "23.0.0", default-features = false}
sp-staking = {version = "19.0.0", default-features = false, optional = true}
sp-std = {package = "sp-std", version = "7.0.0", default-features = false}

[dependencies.log]
default-features = false
version = '0.4.17'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '2.1.1'

[dev-dependencies.serde]
features = ['derive']
version = '1.0.126'

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
  'codec/std',
  'frame-benchmarking/std',
  'frame-support/std',
  'frame-system/std',
  'scale-info/std',
  'sp-core/std',
  'sp-io/std',
  'sp-std/std',
  'sp-runtime/std',
  'sp-staking/std',
  'pallet-session/std',
]
# try-runtime = ['frame-support/try-runtime']
