[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "FRAME pallet to manage transaction payments"
edition = "2018"
homepage = "https://substrate.dev"
license = "Apache-2.0"
name = "pallet-transaction-payment"
readme = "README.md"
repository = "https://github.com/paritytech/substrate/"
version = "3.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"]}
frame-support = {version = "3.0.0", default-features = false}
frame-system = {version = "3.0.0", default-features = false}
serde = {version = "1.0.101", optional = true}
smallvec = "1.4.1"
sp-core = {version = "3.0.0", default-features = false}
sp-io = {version = "3.0.0", default-features = false}
sp-runtime = {version = "3.0.0", default-features = false}
sp-std = {version = "3.0.0", default-features = false}

groups = {package = "pallet-groups", path = "../groups", default-features = false}

[dev-dependencies]
pallet-balances = {version = "3.0.0"}
serde_json = "1.0.41"
sp-storage = {version = "3.0.0"}

[features]
default = ["std"]
std = [
  "serde",
  "codec/std",
  "sp-std/std",
  "sp-runtime/std",
  "frame-support/std",
  "frame-system/std",
  "sp-io/std",
  "sp-core/std",
  "groups/std",
]
