[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "FRAME pallet to manage transaction payments"
edition = "2021"
homepage = "https://substrate.dev"
license = "Apache-2.0"
name = "pallet-transaction-payment"
readme = "README.md"
repository = "https://github.com/paritytech/substrate/"
version = "4.0.0-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "3.4.0", default-features = false, features = ["derive"]}
frame-support = {version = "21.0.0", default-features = false}
frame-system = {version = "21.0.0", default-features = false}
scale-info = {version = "2.5.0", default-features = false, features = ["derive"]}
serde = {version = "1.0.101", optional = true}
smallvec = "1.4.1"
sp-core = {version = "20.0.0", default-features = false}
sp-io = {version = "22.0.0", default-features = false}
sp-runtime = {version = "23.0.0", default-features = false}
sp-std = {version = "7.0.0", default-features = false}

groups = {package = "pallet-groups", path = "../groups", default-features = false}

[dev-dependencies]
pallet-balances = {version = "21.0.0"}
runtime = {package = "borlaug-runtime", path = "../../runtime", features = ["std", "grandpa_aura"]}
serde_json = "1.0.41"
sp-storage = {version = "12.0.0"}

[features]
default = ["std"]
std = [
  "serde",
  "codec/std",
  "sp-std/std",
  "sp-runtime/std",
  "frame-support/std",
  "frame-system/std",
  "sp-io/std",
  "sp-core/std",
  "groups/std",
]
