[package]
authors = ["Borlaug Blockchain"]
edition = "2021"
name = "utils"
version = "0.1.0"

[dependencies]
codec = {package = "parity-scale-codec", version = "3.4.0", default-features = false}
frame-support = {version = "21.0.0", default-features = false}
sp-core = {version = "20.0.0", default-features = false}
sp-std = {version = "7.0.0", default-features = false}

[features]
default = ['std']
no_std = []
std = [
  'codec/std',
  "sp-core/std",
  "sp-std/std",
  'frame-support/std',
]
