[package]
authors = ["Borlaug Blockchain"]
description = "A trait that supplies a customizable extra fixed weight for extrinsics"
edition = "2021"
name = "extrinsic-extra"
version = "2.0.0"

[dependencies]
# Substrate packages
frame-support = {version = "21.0.0", default-features = false}

[features]
default = ['std']
std = ["frame-support/std"]
