[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "RPC interface for the transaction payment module."
edition = "2018"
homepage = "https://substrate.dev"
license = "Apache-2.0"
name = "pallet-transaction-payment-rpc"
readme = "README.md"
repository = "https://github.com/paritytech/substrate/"
version = "3.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "3.4.0"}
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
pallet-transaction-payment-rpc-runtime-api = {version = "3.0.0", path = "./runtime-api"}
sp-api = {version = "19.0.0"}
sp-blockchain = {version = "21.0.0"}
sp-core = {version = "20.0.0"}
sp-rpc = {version = "19.0.0"}
sp-runtime = {version = "23.0.0"}
