[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "RPC runtime API for transaction payment FRAME pallet"
edition = "2018"
homepage = "https://substrate.dev"
license = "Apache-2.0"
name = "pallet-transaction-payment-rpc-runtime-api"
readme = "README.md"
repository = "https://github.com/paritytech/substrate/"
version = "3.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"]}
pallet-transaction-payment = {version = "3.0.0", default-features = false, path = "../../../transaction-payment"}
sp-api = {version = "3.0.0", default-features = false}
sp-runtime = {version = "3.0.0", default-features = false}

[features]
default = ["std"]
std = [
  "sp-api/std",
  "codec/std",
  "sp-runtime/std",
  "pallet-transaction-payment/std",
]
